--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stephani | Portfolio</title>
-    <meta name="description" content="Portfólio profissional de Stephani, apresentando projetos e trabalhos criativos" />
+    <title>Stephani - Web Developer & Designer</title>
+    <meta name="description" content="Stephani's Portfolio - Web Developer & Designer specializing in modern web applications" />
     <meta name="author" content="Stephani" />
-    <meta property="og:image" content="/og-image.png" />
+
+    <meta property="og:title" content="Stephani - Web Developer & Designer" />
+    <meta property="og:description" content="Stephani's Portfolio - Web Developer & Designer specializing in modern web applications" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    
+    <!-- Google Fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap">
   </head>
 
   <body>
